은행가 알고리즘, CPU 스케줄링 알고리즘

--- a/Operating System/교착상태.md
+++ b/Operating System/교착상태.md
@@ -39,15 +39,36 @@
 
 #### ☑️ 은행원 알고리즘의 구조
 - `available[i]` : 운영체제가 프로세스에게 자원을 줄 수 있는 양
-- `max[i][j]` : 프로세스 최대요구량
-- `allocation[i][j]` : 프로세스 자원할당량
+- `max[i][j]` : 프로세스가 필요로하는 자원의 최대요구량
+- `allocation[i][j]` : 프로세스에 현재 할당되어있는 자원양
 - `need[i][j]` : 프로세스의 자원 추가요구량
 - `finish[i]` : i번째 프로세스가 요청하는 양을 운영체제가 만족할 수 있는지를 파악하는 배열
 
-#### ☑️ 은행원 알고리즘의 순서
-1. request[i] <= need[i]
-    - 
-2. request[i] <= available[i]
-    -
-3. request[i]의 값이 available[i]에 더해지며, need[i]에 request[i]의 값이 차감됨
-4. 모든 프로세스에 대해 반복한 뒤, finish[i]가 True라면 안정상태가 됨
+#### ☑️ 안정성 알고리즘
+![img_2.png](img/안정성알고리즘.png)
+
+#### ☑️ 자원요청 알고리즘
+![img_8.png](img/자원요청%20알고리즘.png)
+
+#### ☑️ 은행원 알고리즘 순서
+#### 초기상태
+![img_1.png](img/은행원_초기.png)
+#### P1 완료
+![img_3.png](img/은행원_P1.png)
+#### P3 완료
+![img_4.png](img/은행원_P3.png)
+#### P4 완료
+![img_5.png](img/은행원_P4.png)
+#### P2 완료(P0를 먼저 해줘도 됨)
+![img_6.png](img/은행원_P2.png)
+#### P0 완료
+![img_7.png](img/은행원_P0.png)
+
+#### ☑️ 자원 추가요청 예시
+![img_9.png](img/자원요청_안정.png)
+
+![img_10.png](img/자원요청_불안정.png)
+
+#### ☑️ 은행원 알고리즘의 단점
+- 프로세스가 시스템에 들어갈 때 필요한 최대 자원 수를 예측해야 하는데, 이를 예측하기가 어려움
+- 자원소모량이 증가하게 되며 프로그램의 수는 고정되어있지 않고 변하기 때문에 사용하기 어려움
