은행가알고리즘, 스케줄링알고리즘

--- a/Operating System/교착상태.md
+++ b/Operating System/교착상태.md
@@ -23,11 +23,14 @@
 ### 💭 교착상태의 해결방법
 
 - 자원을 할당할 때 애초에 조건이 성립되지 않도록 설계
-- 은행원 알고리즘 사용
+- `은행원 알고리즘` 사용
 - 교착상태가 발생하면 사이클이 있는지 찾아보고, 이에 관련된 프로세스를 한개씩 지움
 - 교착상태는 매우 드물게 일어나므로 이를 처리하는 비용이 더 커서 교착상태가 발생하면 사용자가 작업을 종료함
     - ex) 응답없음
+  
   ![img.png](img/응답없음.png)
+
+---
 
 ### 💭 은행원 알고리즘
 - 교착상태를 회피하는 알고리즘
