캐시, 메모리 할당

--- a/Operating System/메모리할당.md
+++ b/Operating System/메모리할당.md
@@ -11,14 +11,14 @@
 - 사용가능한 메모리 공간이 같은 위치에 존재(메모리 파티션이 전체 메모리 공간에 분산 x)
 - 고정분할방식, 가변분할방식이 존재
 
-![img_2.png](img_2.png)
+![img_2.png](img/고정분할_가변분할.png)
 
 #### ☑️ 고정분할방식(Fixed Partition Allocation)
 
 - 메모리를 같은 크기로 분할해서 할당하는 방법
 - `내부단편화`가 발생
 
-![img.png](img.png)
+![img.png](img/내부단편화.png)
 
 >`내부단편화` : 프로그램이 필요공간보다 더 많은 메모리가 할당되어, 내부적으로 조각이 많이 생기는 것
 
@@ -27,11 +27,11 @@
 - 프로그램에 필요한만큼 동적으로 할당하는 기법
 - `외부단편화`가 발생
 
-![img_1.png](img_1.png)
+![img_1.png](img/외부단편화.png)
 
 >`외부단편화` : 동적으로 할당한 외부에 작은 조각들이 생기게 되는 현상
 
-![img_3.png](img_3.png)
+![img_3.png](img/최초_최적_최악적합.png)
 
 >`최초적합(First Fit)` : 위쪽이나 아래쪽부터 시작해서 홀을 찾으면 바로 할당<br>
 >`최적적합(Best Fit)` : 필요한 메모리 크기 이상인 공간 중 가장 작은 홀부터 할당<br>
@@ -51,7 +51,7 @@
 
 #### ☑️ 페이징
 
-![img_4.png](img_4.png)
+![img_4.png](img/페이징.png)
 
 - 동일한 크기의 페이지 단위로 나누어 메모리의 서로 다른 위치에 프로세스를 할당
 - 홀의 크기가 균일해지지만, 주소변환을 페이지별로 해야하기 때문에 복잡해지는 단점이 존재
@@ -59,7 +59,7 @@
 
 #### ☑️ 세그먼테이션
 
-![img_5.png](img_5.png)
+![img_5.png](img/세그먼테이션.png)
 
 - 페이지 단위가 아닌 세그먼트로 나누는 방식
 - 공유와 보안 측면에서 좋지만 홀크기가 균일하지 않음
