--- a/Operating System/캐시.md
+++ b/Operating System/캐시.md
@@ -3,8 +3,8 @@
 ---
 
 - 데이터를 미리 복사해 놓는 임시 저장소
-- 빠른장치와 느린장치사이에서 발생하는 속도차이에 따른 병목현상을 줄이기 위한 메모리
-- 데이터접근시간의 단축, 데이터를 다시계산하는 시간을 절약
+- 빠른장치와 느린장치사이에서 발생하는 `속도차이에 따른 병목현상을 줄이기 위한 메모리`
+- 데이터접근시간의 단축, 데이터를 다시 계산하는 시간을 절약
     - ex) CPU 레지스터
 
 ![img.png](img/캐시히트.png)
@@ -74,5 +74,5 @@
 
 ![img_7.png](img/집합연관매핑.png)
 
-- 집합을 나누고(직접매핑) 해당집합에는 bd만 같으면 들어올 수 있게 하는데 어떤 블록에도 들어올수 있게 하는 것
+- 집합을 나누고(직접매핑) 해당집합에는 bd만 같으면 들어올 수 있게 하는데 어떤 블록에도 들어올수 있게 하는 것(연관매핑)
 - 모든 블록을 찾을 필요없이 특정블록을 찾게해 탐색비용을 낮추고 스와핑을 완화시키는 직접매핑과 연관매핑의 장점을 모두 지님
