--- a/Operating System/교착상태.md
+++ b/Operating System/교착상태.md
@@ -8,14 +8,14 @@
 
 ### 💭 교착상태의 필요조건
 
-- `상호배제`
-    - 주어진 시간내에 하나의 프로세스만 자원을 독점할 수 있음
+- `상호배제(Mutual Exclusion)`
+    - 주어진 시간내에 `하나의 프로세스만 자원을 독점`할 수 있음
     - 다른 프로세스들은 접근 불가
-- `점유대기`
-    - 특정 프로세스가 점유한 자원을 다른 프로세스가 요청하며 대기하는 상태
-- `비선점`
+- `점유대기(Hold and Wait)`
+    - 특정 프로세스가 점유한 자원을 다른 프로세스가 `요청하며 대기`하는 상태
+- `비선점(No Preemption)`
     - 다른 프로세스의 자원을 강제적으로 가져올 수 없음 
-- `환형대기`
+- `환형대기(Circular Wait)`
     - 서로가 서로의 자원을 요구하는 상황
 
 4가지 조건이 모두 충족되어야 `교착상태가 일어날 수 있음`. 모두 충족되더라도 꼭 교착상태가 발생하진 않음
@@ -25,7 +25,7 @@
 - 자원을 할당할 때 애초에 조건이 성립되지 않도록 설계
 - `은행원 알고리즘` 사용
 - 교착상태가 발생하면 사이클이 있는지 찾아보고, 이에 관련된 프로세스를 한개씩 지움
-- 교착상태는 매우 드물게 일어나므로 이를 처리하는 비용이 더 커서 교착상태가 발생하면 사용자가 작업을 종료함
+- 교착상태는 매우 드물게 일어나므로 이를 처리하는 비용이 더 커서 교착상태가 발생하면 시스템은 사용자가 작업을 종료하게 함
     - ex) 응답없음
   
   ![img.png](img/응답없음.png)
