--- a/Operating System/임계영역, 경쟁상태.md
+++ b/Operating System/임계영역, 경쟁상태.md
@@ -29,7 +29,7 @@
 ---
 
 - `뮤텍스, 세마포어, 모니터`는 경쟁상태를 해결하는 대표적인 방법
-- 이들은 상호배제, 한정대기, 진행 조건을 만족하면서 경쟁상태를 해결함
+- 이들은 `상호배제, 한정대기, 진행` 조건을 만족하면서 경쟁상태를 해결함
 
 #### ☑️ 상호배제(Mutual Exclusion)
 
