--- a/Operating System/프로세스 상태.md
+++ b/Operating System/프로세스 상태.md
@@ -31,7 +31,7 @@
 ### 💭 실행(Running)
 
 - CPU 소유권과 메모리를 할당받고 인스트럭션을 수행중인 상태
-- CPU burst가 일어났다라고도 표현
+- `CPU burst`가 일어났다라고도 표현
 
 ### 💭 대기(Blocked)
 
