--- a/Operating System/캐시.md
+++ b/Operating System/캐시.md
@@ -31,8 +31,8 @@
 #### ☑️ 지역성(Locality)
 
 - 캐시를 설정할 때는 자주 사용하는 데이터를 기반으로 설정
-- `시간지역성` : 최근 사용한 데이터에 다시 접근하려는 특성
-- `공간지역성` : 최근 접근한 데이터를 이루고 있는 공간이나 그 가까운 공간에 접근하는 특성
+- `시간 지역성` : 최근 사용한 데이터에 다시 접근하려는 특성
+- `공간 지역성` : 최근 접근한 데이터를 이루고 있는 공간이나 그 가까운 공간에 접근하는 특성
 
 ---
 
@@ -75,4 +75,4 @@
 ![img_7.png](img/집합연관매핑.png)
 
 - 집합을 나누고(직접매핑) 해당집합에는 bd만 같으면 들어올 수 있게 하는데 어떤 블록에도 들어올수 있게 하는 것(연관매핑)
-- 모든 블록을 찾을 필요없이 특정블록을 찾게해 탐색비용을 낮추고 스와핑을 완화시키는 직접매핑과 연관매핑의 장점을 모두 지님
+- 모든 블록을 찾을 필요없이 특정블록을 찾게해 탐색비용을 낮추고 스와핑을 완화시키는 직접매핑과 연관매핑의 장점을 모두 지님(직접매핑 + 연관매핑)
