--- a/Operating System/경쟁상태.md
+++ b/Operating System/경쟁상태.md
@@ -1,3 +1,14 @@
+## 📓 키워드
+
+- 공유자원
+- 경쟁상태
+- 임계영역
+- 뮤텍스
+- 세마포어
+- 모니터
+
+---
+
 ## ✏️ 공유자원, 경쟁상태, 임계영역
 
 ---
@@ -9,18 +20,22 @@
 ### 💭 경쟁상태(Race Condition)
 
 - 공유자원을 둘 이상의 프로세스 또는 스레드가 동시에 읽거나 쓰는 상황
-- 공유자원에 동시에 접근을 시도할 때의 타이밍이나 순서가 예상되는 결과값에 영향을 미칠수 있는 형태
+- 공유자원에 동시에 접근을 시도할 때의 타이밍이 예상되는 결과값에 영향을 줄 수 있는 형태
 
 ### 💭 임계영역(Critical Section)
 
 ![img.png](img/임계영역.png)
 
 - 둘 이상의 프로세스 또는 스레드가 공유자원에 접근할 때 순서 등의 이유로 결과가 달라지는 `코드영역`
+- 임계영역은 한번에 둘 이상의 프로세스나 스레드가 들어갈 수 없게 설계됨
 - 경쟁상태가 발생할 수 있는 코드부분
 
 #### ☑️ 경쟁상태 관리의 중요성
 
 - 데이터의 정합성, 무결성을 지키지 못할 수 있음
+
+> 데이터의 정합성 : 예상되는 데이터의 값과 다른 것<br>
+> 데이터 무결성 : 데이터의 어떠한 규칙을 위반하면 안되는 것
 
 ---
 
@@ -33,7 +48,7 @@
 
 #### ☑️ 상호배제(Mutual Exclusion)
 
-- 한 프로세스가 임계영역에 들어갔을때 다른 프로세스는 진입할 수 없음
+- 한 프로세스가 임계영역에 들어갔을 때 다른 프로세스는 진입할 수 없음
 
 #### ☑️ 한정대기(Bounded Waiting)
 
@@ -77,5 +92,5 @@
 - 공유자원에 대한 작업들을 순차적으로 처리함(큐)
 
 #### ☑️ 모니터와 세마포어의 차이점
-- `모니터`는 구현하기 쉬우며, `한번에 하나의 프로세스`만 공유자원에 접근가능하며 `인터페이스`를 기반으로 구축됨
+- `모니터`는 구현하기 쉬우며, `한번에 하나의 프로세스`만 공유자원에 접근가능(상호배제 충족)하며 `인터페이스`를 기반으로 구축됨
 - `세마포어`는 구현하기 어려우며, `한번에 여러개의 프로세스`가 공유자원에 접근가능하며 `상호배제`를 명시적으로 구현해야 함. `정수변수(S)`를 기반으로 구축됨
