--- a/Operating System/교착상태.md
+++ b/Operating System/교착상태.md
@@ -1,8 +1,15 @@
+## 📓 키워드
+
+- 교착상태
+- 은행원 알고리즘
+
+---
+
 ## ✏️ 교착상태(Deadlock)
 
 ---
 
-- 두 개 이상의 프로세스들이 서로가 가진 자원을 기다리며 중단된 상태
+- 두 개 이상의 프로세스들이 서로가 가진 자원을 기다리며 중단된 상태(lock)
 - 각 프로세스는 서로가 원하는 자원을 유지한 채 다른 프로세스의 자원을 얻기를 기다리는 것
 ![img.png](img/교착상태.png)
 
@@ -34,24 +41,24 @@
 
 ### 💭 은행원 알고리즘
 - 교착상태를 회피하는 알고리즘
-- 총 자원의 양과 현재 할당한 자원의 양을 기준으로 안정 또는 불안정 상태로 나누고 안정상태로 가도록 자원을 할당하는 알고리즘
+- 총 자원의 양과 현재 할당한 자원의 양을 기준으로 안정 또는 불안정 상태로 나누고 `안정상태로 가도록 자원을 할당`하는 알고리즘
 
 > 안정상태 : 교착상태를 일으키지 않는 상태이며, 프로세스의 최대자원요구량을 운영체제가 충족시킬 수 있는 상태
 
-> 불안정상태 : 안전상태로 가는 순서열이 존재하지 않는 상태
+> 불안정상태 : 안정상태로 가는 순서열이 존재하지 않는 상태
 
 #### ☑️ 은행원 알고리즘의 구조
-- `available[i]` : 운영체제가 프로세스에게 자원을 줄 수 있는 양
-- `max[i][j]` : 프로세스가 필요로하는 자원의 최대요구량
-- `allocation[i][j]` : 프로세스에 현재 할당되어있는 자원양
-- `need[i][j]` : 프로세스의 자원 추가요구량
-- `finish[i]` : i번째 프로세스가 요청하는 양을 운영체제가 만족할 수 있는지를 파악하는 배열
-
-#### ☑️ 안정성 알고리즘
-![img_2.png](img/안정성알고리즘.png)
+- `available[i]` : 운영체제가 프로세스에게 자원을 줄 수 있는 양, i번째 사용가능한 자원의 양
+- `max[i][j]` : 프로세스가 필요로하는 자원의 최대요구량, 프로세스 i가 자원 j를 최대요청할 수 있는 양
+- `allocation[i][j]` : 프로세스에 현재 할당되어있는 자원양, 프로세스 i에 자원 j를 할당한 양
+- `need[i][j]` : 프로세스의 자원 추가요구량, 프로세스 i가 자원 j를 추가요청하는 양
+- `finish[i]` : i번째 프로세스가 요청하는 양을 운영체제가 만족할 수 있는지를 파악하는 boolean 배열
 
 #### ☑️ 자원요청 알고리즘
 ![img_8.png](img/자원요청%20알고리즘.png)
+
+#### ☑️ 안정성 알고리즘
+![img_2.png](img/안정성알고리즘.png)
 
 #### ☑️ 은행원 알고리즘 순서
 #### 초기상태
