--- a/Operating System/멀티프로세싱, 멀티스레딩.md
+++ b/Operating System/멀티프로세싱, 멀티스레딩.md
@@ -1,9 +1,15 @@
+## 📓 키워드
+
+- 멀티 프로세싱
+- 멀티 스레딩
+
+---
+
 ## ✏️ 멀티 프로세싱
 
 ---
 
-- 여러개의 프로세스
-- 두 가지 이상의 일을 수행할 수 있는 것
+- 여러개의 프로세스를 통해 두 가지 이상의 일을 수행할 수 있는 것
 - `장점` : 특정 프로세스에 문제가 발생되더라도 다른 프로세스에 영향을 미치지 않으며 격리성과 신뢰성이 높다
 - 여러개의 프로세스를 만든 상태를 `멀티프로세스`라고하며 이를 기반으로 작업 하는 것을 `멀티프로세싱`이라고 함
 
