--- a/Operating System/캐시.md
+++ b/Operating System/캐시.md
@@ -1,3 +1,12 @@
+## 📓 키워드
+
+- 캐시
+- 직접매핑
+- 연관매핑
+- 집합 연관 매핑
+
+---
+
 ## ✏️ 캐시
 
 ---
@@ -31,15 +40,15 @@
 #### ☑️ 지역성(Locality)
 
 - 캐시를 설정할 때는 자주 사용하는 데이터를 기반으로 설정
-- `시간 지역성` : 최근 사용한 데이터에 다시 접근하려는 특성
-- `공간 지역성` : 최근 접근한 데이터를 이루고 있는 공간이나 그 가까운 공간에 접근하는 특성
+- `시간 지역성(Temporal Locality)` : 최근 사용한 데이터에 다시 접근하려는 특성
+- `공간 지역성(Spatial Locality)` : 최근 접근한 데이터를 이루고 있는 공간이나 그 가까운 공간에 접근하는 특성
 
 ---
 
 ## ✏️ 매핑
 
 - 캐시의 크기는 메모리보다 항상 작기 때문에 효율적으로 매핑하는 것이 중요함
-- 매핑을 `사상`이라고 부르기도 함
+- `사상`이라고 부르기도 함
 
 ### 💭 직접 매핑(Direct Mapping)
 
@@ -54,11 +63,11 @@
 
 ![img_4.png](img/직접매핑_내부구성.png)
 
-- 운영체제는 메모리를 똑같은 크기의 페이지로 나눠서 관리를 함(<P,D>)
+- 운영체제는 메모리를 똑같은 크기의 페이지로 나눠서 관리를 함 <P, D>
 - P : 페이지 번호, D : 페이지번호로부터 해당주소까지의 거리
 - 가상주소에서 실제주소로 변환될때, D는 변하지 않고 P만 변환됨
 - P는 {tag, bd}로 세분화해서 직접매핑을 구현함
-- bd가 같은 라인만 매핑이 되게 함
+- bd(block distance)가 같은 라인만 매핑이 되게 함
 
 ### 💭 연관 매핑(Associative Mapping)
 
