--- a/Operating System/컴파일 과정.md
+++ b/Operating System/컴파일 과정.md
@@ -1,6 +1,14 @@
+## 📓 키워드
+
+- 컴파일
+
+---
+
 ## ✏️ 컴파일 과정
 
 ---
+
+![img.png](img/컴파일.png)
 
 컴파일러가 컴파일 과정을 거쳐 컴퓨터가 이해할 수 있는 기계어로 번역되어 실행할 수 있는 파일이 된 것
 
@@ -12,9 +20,9 @@
 
 - 소스코드의 주석제거
 - 헤더파일 등을 병합 & 소스코드내 삽입
-  - #include
+  - ex) #include
 - 매크로를 치환
-    - #define
+  - ex) #define
 
 #### ☑️ 컴파일러
 
@@ -24,7 +32,7 @@
 
 #### ☑️ 어셈블러
 
-- 리눅스에서는 `.o` 확장자를 가짐
+- 확장자는 운영체제마다 다르지만, 리눅스에서는 `.o` 확장자를 가짐
 - 목적코드(object code)로 변환
 
 #### ☑️ 링커
