--- a/Operating System/메모리할당.md
+++ b/Operating System/메모리할당.md
@@ -1,3 +1,14 @@
+## 📓 키워드
+
+- 고정분할방식
+- 가변분할방식
+- 내부 / 외부단편화
+- 페이징
+- 세그먼테이션
+
+---
+
+
 ## ✏️ 메모리 할당
 
 ---
@@ -7,7 +18,7 @@
 
 ### 💭 연속 할당(Contiguous Memory Allocation)
 
-- 메모리에 연속적으로 공간을 할당하는 것
+- 메모리에 `연속적으로` 공간을 할당하는 것
 - 사용가능한 메모리 공간이 같은 위치에 존재(메모리 파티션이 전체 메모리 공간에 분산 x)
 - 고정분할방식, 가변분할방식이 존재
 
@@ -61,7 +72,7 @@
 
 ![img_5.png](img/세그먼테이션.png)
 
-- 페이지 단위가 아닌 세그먼트로 나누는 방식
+- 페이지 단위가 아닌 의미 단위인 세그먼트로 나누는 방식
 - 공유와 보안 측면에서 좋지만 홀크기가 균일하지 않음
 - `외부단편화` 발생할 수 있음
 
