--- a/Database/관계와 키.md
+++ b/Database/관계와 키.md
@@ -12,23 +12,23 @@
 
 ---
 
-![img.png](img.png)
+![img.png](img/관계.png)
 
 ### 💭 1:1
 
-![img_1.png](img_1.png)
+![img_1.png](1:1.png)
 
 - 회원가입 시, 유저와 이메일의 관계
 
 ### 💭 1:N
 
-![img_2.png](img_2.png)
+![img_2.png](img/1대N.png)
 
 - 쇼핑몰사이트의 유저와 장바구니에 담은 상품의 관계
 
 ### 💭 N:M
 
-![img_3.png](img_3.png)
+![img_3.png](img/N대M.png)
 
 - 학생과 강의의 관계
 - 직접적으로 연결하지 않고 1:N, 1:M 이라는 관계를 갖는 테이블 2개로 나눠서 설정
@@ -42,7 +42,7 @@
 - 데이터베이스를 설계할 때, 키를 기반으로 테이블 간의 관계를 정의
 - 키의 종류 : 기본키, 외래키, 대체키, 후보키, 슈퍼키, 복합키
 
-![img_4.png](img_4.png)
+![img_4.png](img/키%20종류.png)
 
 > `유일성` : 중복되는 값 없다<br>
 > `최소성` : 필드를 조합하지 않고, 최소 필드만 써서 키를 형성할 수 있는 것
@@ -83,7 +83,7 @@ CREATE TABLE socks(
 
 ### 💭 외래키
 
-![img_5.png](img_5.png)
+![img_5.png](img/외래키.png)
 
 - Foreign Key
 - 다른 테이블의 기본키를 참조하는 필드
@@ -95,7 +95,7 @@ CREATE TABLE socks(
 
 ### 💭 후보키
 
-![img_6.png](img_6.png)
+![img_6.png](img/후보키.png)
 
 - 기본키가 될 수 있는 후보들
 - 유일성과 최소성을 모두 만족하는 키
