--- a/Database/관계와 키.md
+++ b/Database/관계와 키.md
@@ -16,7 +16,7 @@
 
 ### 💭 1:1
 
-![img_1.png](1:1.png)
+![img_1.png](img/1대1.png)
 
 - 회원가입 시, 유저와 이메일의 관계
 
@@ -87,11 +87,11 @@ CREATE TABLE socks(
 
 - Foreign Key
 - 다른 테이블의 기본키를 참조하는 필드
-- 외래키는 참조하는 기본키의 값과 일치해야하며 중복될 수 있고, NULL값을 가질 수도 있음
+- 외래키는 참조하는 기본키의 값과 일치해야하며 `중복될 수 있고, NULL값을 가질 수도 있음`
 
 ### 💭 대체키
 
-- 기본키로 선택되지 않은 후보키
+- 후보키 중 기본키로 선택되지 않은 키
 
 ### 💭 후보키
 
@@ -102,7 +102,7 @@ CREATE TABLE socks(
 
 ### 💭 슈퍼키
 
-- 테이블 내의 행을 고유하게 식별할 수 있는 유일성을 갖춘 키
+- 테이블 내의 행을 고유하게 식별할 수 있는 `유일성`을 갖춘 키
 
 ### 💭 복합키
 
