--- a/Database/관계와 키.md
+++ b/Database/관계와 키.md
@@ -5,6 +5,7 @@
 - 외래키
 - 후보키
 - CRUD
+- ERD
 
 ---
 
@@ -156,3 +157,60 @@ DELETE FROM employees WHERE name = 'Emily Davis';
 -- 테이블 삭제
 DROP TABLE employees;
 ```
+
+---
+
+## ✏️ ERD
+
+![img.png](img/ERD.png)
+
+```sql
+-- 영업사원 테이블
+CREATE TABLE Salesperson (
+SalespersonID INT PRIMARY KEY,
+Name VARCHAR(100),
+Contact VARCHAR(100)
+);
+
+-- 고객 테이블
+CREATE TABLE Customer (
+CustomerID INT PRIMARY KEY,
+Name VARCHAR(100),
+Address VARCHAR(200),
+Contact VARCHAR(100),
+SalespersonID INT,
+FOREIGN KEY (SalespersonID) REFERENCES
+Salesperson(SalespersonID)
+);
+
+-- 주문 테이블
+CREATE TABLE Orders (
+OrderID INT PRIMARY KEY,
+OrderDate DATE,
+ShippingAddress VARCHAR(200),
+CustomerID INT,
+FOREIGN KEY (CustomerID) REFERENCES Customer(CustomerID)
+);
+
+-- 상품 테이블
+CREATE TABLE Product (
+ProductID INT PRIMARY KEY,
+Name VARCHAR(100),
+Price DECIMAL(10, 2)
+);
+
+-- 주문 세부 정보 테이블 (주문과 상품 간의 N:M 관계를 나타냄)
+CREATE TABLE Order_Details (
+OrderID INT,
+ProductID INT,
+Quantity INT,
+FOREIGN KEY (OrderID) REFERENCES Orders(OrderID),
+FOREIGN KEY (ProductID) REFERENCES Product(ProductID),
+PRIMARY KEY (OrderID, ProductID)
+);
+
+```
+
+- 데이터베이스를 구축할 때 가장 기초적인 뼈대 역할
+- 릴레이션 간의 관계들을 정의한 것
+- ERD는 시스템 요구사항을 기반으로 작성되며, 이 ERD를 기반으로 데이터베이스를 구축함
