--- a/Database/트랜잭션.md
+++ b/Database/트랜잭션.md
@@ -56,27 +56,27 @@
 set session transaction isolation level read uncommitted;
 ```
 
-![img.png](img.png)
+![img.png](img/격리수준1.png)
 
 ### 💭 격리수준에 따른 이상현상
 
-![img_1.png](img_1.png)
+![img_1.png](img/격리수준2.png)
 
 #### ☑️ 팬텀 리드(Phantom Reads)
 
-![img_2.png](img_2.png)
+![img_2.png](img/팬텀리드.png)
 
 - 한 트랜잭션 내에서 동일한 쿼리를 2번 이상 보냈을 때 해당 조회결과가 다른 것
 
 #### ☑️ 반복 가능하지 않은 조회(Nonrepeatable Reads)
 
-![img_3.png](img_3.png)
+![img_3.png](img/반복가능하지않은리드.png)
 
 - 한 트랜잭션 내의 같은 행을 두번 이상조회가 발생했는데, 그 값이 다른 것
 
 #### ☑️ 더티 리드(Dirty Reads)
 
-![img_4.png](img_4.png)
+![img_4.png](img/더티리드.png)
 
 - 하나의 트랜잭션이 다른 트랜잭션의 아직 커밋되지 않은 데이터를 읽는 현상
 
@@ -92,18 +92,18 @@ set session transaction isolation level read uncommitted;
 - 커밋 완료된 데이터에 대해서만 조회할 수 있으며 반복해서 행을 조회하더라도 똑같은 행을 보장하는 단계
 - 하나의 트랜잭션이 수정한 행을 다른 트랜잭션이 수정할 수 없도록 막아주지만 새로운 행을 추가하는 것은 막지 않음
 - 따라서, 똑같은 범위 쿼리를 실행했을 때, 이후에 추가된 행이 발견될 수 있음
-- 팬텀리드가 일어날 수 있는 상태
+- `팬텀리드`가 일어날 수 있는 상태
 - MySQL 8.0의 innoDB의 기본값
 
 #### ☑️ Read Committed
 
 - 커밋 완료된 데이터에 대해서만 조회할 수 있으며 커밋이 되지 않은 정보는 읽지 못함
-- 팬텀리드, 반복가능하지 않은 조회가 일어날 수 있음
+- `팬텀리드, 반복가능하지 않은 조회`가 일어날 수 있음
 - PostgreSQL, SQL Server, Oracle에서의 기본값
 
 #### ☑️ Read Uncommitted
 
 - 가장 낮은 격리 수준이며 가장 빠르다
 - 다른 트랜잭션이 커밋하지 않은 정보를 읽을 수 있음
-- 팬텀리드, 반복 가능하지 않은 조회, 더티리드가 일어날 수 있음
+- `팬텀리드, 반복 가능하지 않은 조회, 더티리드`가 일어날 수 있음
 - MongoDB의 기본값
