--- a/Database/인덱스.md
+++ b/Database/인덱스.md
@@ -1,6 +1,8 @@
 ## 📓 키워드
 
-- 
+- 인덱스
+- B-Tree
+- Clustered Index, Non-Clustered Index
 
 ---
 
@@ -12,7 +14,7 @@
 
 ### 💭 인덱스가 효율적인 이유
 
-- 균형잡힌 B-Tree기반으로 구축되어있어서 탐색에 평균 O(logN) 시간이 걸리며 트리 생성시의 대수확장성이란 특징으로 인해 더 빠른 시간안에 많은 양의 데이터를 빠르게 찾을 수 있음
+- 균형잡힌 B-Tree기반으로 구축되어있어서 탐색에 평균 `O(logN)` 시간이 걸리며 트리 생성시의 대수확장성이란 특징으로 인해 더 빠른 시간안에 많은 양의 데이터를 빠르게 찾을 수 있음
 
 #### ☑️ B-Tree
 
@@ -49,8 +51,8 @@
 - 여러필드를 기반으로 조회를 할때 복합 인덱스를 설정하는데, 이 인덱스를 생성할 때는 순서가 있고 생성순서에 따라 인덱스 성능이 달라짐
 - 같음 => 정렬 => 다중값 => 카디널리티 순으로 생성해야 함
 > (1) 어떠한 값과 같음을 비교하는 ==이나 equal이라는 쿼리가 있다면 제일 먼저 인덱스로 설정<br>
-> (2) 정렬에 쓰는 필드라면 그 다음 인덱스로 설정<br>
-> (3) 다중 값을 출력해야 하는 필드, 즉 쿼리 자체가 >이거나 < 등 많은 값을 출력해야 하는 쿼리에 쓰는 필드라면 나중에 인덱스를 설정<br>
+> (2) 정렬에 쓰는 필드라면 그 다음 인덱스로 설정(WHERE location = 'Seoul')<br>
+> (3) 다중 값을 출력해야 하는 필드, 즉 쿼리 자체가 >이거나 < 등 많은 값을 출력해야 하는 쿼리에 쓰는 필드라면 나중에 인덱스를 설정(WHERE age > 20)<br>
 > (4) 유니크한 값의 정도를 카디널리티라고 함. 이 카디널리티가 높은 순서를 기반으로 인덱스를 생성해야 함
 
 ---
