--- a/Database/Level 3/데드락, 해결방법.md
+++ b/Database/Level 3/데드락, 해결방법.md
@@ -11,7 +11,7 @@
 
 - 둘 이상의 트랜잭션이 서로가 잠금을 포기하기를 기다리는 상황(=교착상태)
 
-![img.png](img.png)
+![img.png](../img/deadlock.png)
 
 ### 💭 발생조건
 
@@ -38,7 +38,7 @@
 
 - 트랜잭션에 관한 대기그래프를 만들고 해당 그래프에 사이클이 발생됨을 주기적으로 검사
 
-![img_1.png](img_1.png)
+![img_1.png](../img/deadlock_cycle.png)
 
 - 대규모 데이터베이스의 경우 모든 트랜잭션의 사이클을 찾아 데드락을 감지하는 것은 코스트가 크다
 - 보통은 timeout과 데드락방지방법을 사용함
