공간복잡도, 정적배열

--- a/Data Structure/Level 3/복잡도.md
+++ b/Data Structure/Level 3/복잡도.md
@@ -1,6 +1,7 @@
 ## 📓 키워드
 
 - 시간복잡도
+- 공간복잡도
 - 빅오표기법
 
 ---
@@ -14,6 +15,16 @@
 - 복잡도는 시간복잡도와 공간복잡도로 나뉘어짐
 - 입력크기에 대해 어떠한 알고리즘이 실행되는데 걸리는 시간
 - 주요로직의 반복횟수를 중점으로 측정됨
+- 효율적인 코드로 개선하는데 쓰이는 기준
+
+### 💭 공간복잡도
+
+- 입력크기에 대해 어떠한 알고리즘이 실행되는데 필요한 메모리 공간의 양
+- 최대범위, 메모리제한
+
+![img.png](../img/최대범위.png)
+
+![img_1.png](../img/메모리제한.png)
 
 ### 💭 빅오표기법
 
