--- a/Data Structure/Level 3/배열.md
+++ b/Data Structure/Level 3/배열.md
@@ -1,6 +1,7 @@
 ## 📓 키워드
 
 - 정적배열(Array)
+- 동적배열(Vector)
 
 ---
 
@@ -47,3 +48,12 @@ public static void main(String[] args){
         0 1 2 3 4 5 6 7 8 9
  */
 ```
+
+---
+
+## ✏️ 동적배열(Vector)
+
+- 동적으로 요소를 할당할 수 있는 동적 배열
+- 만약 컴파일 시점에 사용해야 할 요소들의 개수를 모른다면 vector를 사용해야함
+- 연속된 메모리 공간에 위치한 같은 타입의 요소들의 모음이며 숫자인덱스를 기반으로 랜덤접근이 가능하며 중복을 허용
+- 참조 : O(1), 탐색 : O(N)
