포인터, asterisk, 배열포인터

--- a/Data Structure/Level 3/메모리와 포인터.md
+++ b/Data Structure/Level 3/메모리와 포인터.md
@@ -1,6 +1,9 @@
 ## 📓 키워드
 
-- 
+- 주소
+- 포인터
+- asterisk
+- 배열 포인터
 
 ---
 
@@ -8,7 +11,84 @@
 
 - 컴퓨터의 메모리는 메모리 셀의 연속과 같으며 각 셀의 크기는 1바이트이고 고유한 주소가 존재함
 
-![img.png](img.png)
+![img.png](../img/메모리.png)
 
 - 변수의 메모리 주소란 변수가 사용하는 메모리 주소의 첫번째를 가리킴
 - 메모리 주소는 16진수로 표기가 됨
+
+## ✏️ 포인터
+
+- 메모리 관리는 언어마다 조금은 다르게 관리됨
+- 자바, 파이썬, 자바스크립트는 직접 변수에 메모리를 할당하거나 해제할 수 없고 `가비지컬렉터`를 통해 이를 수행
+- C, C++은 가비지컬렉터가 없으며 직접 메모리를 예약하고 해제할 수 있으며 포인터 또한 지원함
+
+![img_1.png](../img/가비지컬렉터.png)
+
+### 💭 포인터의 개념
+
+- 변수의 메모리를 담는 타입
+- 포인터는 메모리 동적할당, 데이터를 복사하지 않고 함수 매개변수로 사용, 클래스 및 구조체를 연결할 때 사용
+- `타입* 변수명`
+```cpp
+class Node{
+public:
+    int data;
+    Node* next;
+}
+
+int* a = &i;
+```
+
+- 포인터의 크기는 OS가 32bit면 4바이트, 64bit면 8바이트로 고정되어 있음
+- 어떠한 타입(int, double)이든 상관없이 고정됨
+
+### 💭 역참조연산자
+
+- `*(asterisk)`는 다양한 용도로 사용됨
+- 곱셈, 포인터 타입의 선언, 역참조로 메모리를 기반으로 변수의 값에 접근할 때도 사용
+
+```
+#include<bits/stdc++.h>
+using namespace std;
+int main(){
+    string a = "abcda";
+    string * b = &a;
+    cout << b << "\n";
+    cout << *b << "\n";
+    return 0;
+}
+
+/*
+0x6ffdf0
+abcda
+*/
+```
+
+![img_2.png](../img/역참조연산자.png)
+
+### 💭 array to pointer decay
+
+- 배열이 포인터로 부식(decay)되는 현상
+- 배열의 이름을 `T*` 이라는 포인터에 할당하면서 T[N]이란 배열의 크기정보 N이 없어지고, 첫번째 요소의 주소가 바인딩되는 현상
+- vector(동적배열)는 불가능하고 array(정적배열)만 가능
+
+```
+#include<bits/stdc++.h>
+using namespace std;
+int a[3] = {1, 2, 3};
+int main(){
+    int * c = a;
+    cout << c << "\n";
+    cout << &a[0] << "\n";
+    cout << c + 1 << "\n";
+    cout << &a[1] << "\n";
+    return 0;
+}
+
+/*
+0x472010
+0x472010
+0x472014
+0x472014
+*/
+```
