--- a/Data Structure/Level 3/04_그래프, 트리.md
+++ b/Data Structure/Level 3/04_그래프, 트리.md
@@ -2,6 +2,8 @@
 
 - 그래프
 - 트리
+- 이진트리
+- BST
 
 ---
 
@@ -80,3 +82,35 @@
 #### ☑️ 숲
 
 - 트리가 2개 이상 모여 이루어진 집합
+
+---
+
+## ✏️ 이진트리
+
+- 각 노드의 자식노드 수가 2개 이하로 구성되어있는 트리
+
+![img.png](../img/이진트리.png)
+
+- `Full binary tree(정이진트리)` : 자식노드가 0또는 2개인 이진트리
+- `Complete binary tree(완전이진트리)` : 왼쪽에서부터 채워져 있는 이진트리, 마지막 레벨을 제외하고는 모든 레벨이 완전 채워져 있으며 마지막 레벨의 경우 왼쪽부터 채워져있음
+- `Degenerate binary tree(변질이진트리)` : 자식노드가 1개밖에 없는 이진트리
+- `Perfect binary tree(포화이진트리)` : 모든 노드가 꽉차 있는 트리
+- `Balanced binary tree(균형이진트리)` : 모든노드의 왼쪽 서브트리와 오른쪽 서브트리의 깊이 차이가 1이하인 트리
+
+### 💭 이진탐색트리(BST)
+
+- 부모노드의 오른쪽 서브트리에는 `부모노드의 값보다 큰 값`
+- 부모노드의 왼쪽 서브트리에는 `부모노드의 값보다 작은 값`
+- 전체 탐색을 하지 않아도 되서 검색에 용이하다
+
+![img_1.png](../img/BST.png)
+
+#### ☑️ BST의 시간복잡도
+
+- 균형잡히게 분포가 되어있다면 탐색, 삽입, 삭제, 수정 모두 `O(logN)`
+
+![img_2.png](../img/선형이진트리.png)
+
+- 그러나, 선형적(직선)의로 삽입이 되었다면 `O(N)`이 되어버림
+- 즉, 이진탐색트리는 삽입순서에 따라 영향을 받는다
+- 이를 해결하기 위해, 트리의 노드들을 회전시키는 등의 방법을 통해서 AVL트리, 레드블랙트리를 사용하여 `O(logN)`의 시간복잡도를 보장받음
