인접리스트

--- a/Data Structure/Level 3/05_인접행렬.md
+++ b/Data Structure/Level 3/05_인접행렬.md
@@ -82,3 +82,128 @@ int main(){
 ```
 
 ---
+
+## ✏️ 인접리스트(adjacency list)
+
+- 그래프에서 정점과 간선의 관계를 나타내는 연결리스트를 의미
+
+![img.png](../img/인접리스트.png)
+
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+const int V = 4;
+list<int> adj[V];
+int main(){
+  adj[0].push_back(1);
+  adj[0].push_back(2);
+  adj[0].push_back(3);
+  
+  adj[1].push_back(0);
+  adj[1].push_back(2);
+  
+  adj[2].push_back(0);
+  adj[2].push_back(1);
+  
+  adj[3].push_back(0);
+  
+  for(int i = 0; i < 4; i++){
+    cout << i << " :: ";
+      for(int there : adj[i]){
+        cout << there << " ";
+      }
+    cout << '\n';
+  }
+}
+
+/*
+0 :: 1 2 3
+1 :: 0 2
+2 :: 0 1s
+3 :: 0
+*/
+```
+
+#### ☑️ 연결리스트의 시간복잡도
+
+- N번째 인덱스에 삽입, 삭제 : O(1)
+- 마지막 요소에 삽입, 삭제 : O(1)
+- 특정요소 탐색 : O(N)
+- N번째 요소 참조 : O(N)
+
+#### ☑️ 예제
+
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+const int V = 10;
+list<int> adj[V];
+int visited[V];
+
+void go(int idx){
+  cout << idx << '\n';
+  visited[idx] = 1;
+  
+  for(int there : adj[idx]){
+    if(visited[there]) continue;
+      go(there);
+    }
+  return;
+}
+
+int main(){
+  adj[1].push_back(2);
+  adj[2].push_back(1);
+  
+  adj[1].push_back(3);
+  adj[3].push_back(1);
+  
+  adj[3].push_back(4);
+  adj[4].push_back(3);
+  
+  for(int i = 0; i < V; i++){
+    if(adj[i].size() && visited[i] == 0) go(i);
+   }
+}
+
+/*
+1
+2
+3
+4
+*/
+```
+
+### 💭 인접행렬 vs 인접리스트
+
+#### ☑️ 공간복잡도
+
+- 인접행렬 : O(V^2)
+- 인접리스트 : O(V+E)
+
+```cpp
+// 인접행렬
+bool adj[V][V];
+
+// 인접리스트
+list<int> adj[V];
+```
+
+#### ☑️ 시간복잡도(간선 1개 찾기)
+
+- 인접행렬 : O(1)
+- 인접리스트 : O(V)
+
+#### ☑️ 시간복잡도(모든간선 찾기)
+
+- 인접행렬 : O(V^2)
+- 인접리스트 : O(V+E)
+
+![img_1.png](../img/dense_sparse.png)
+
+> 그래프가 조밀(dense)할 때는 인접행렬, 희소(sparse)할때는 인접리스트를 사용하는 것이 좋다.
+
+- dense할때는 어차피 다 연결되어 있기 때문에 메모리적 효율성은 동일해지고 정점i에서 정점j까지의 확인하는 속도가 인접행렬이 더 빠르다
+- sparse할때는 인접행렬이 더 많은 메모리를 써야함. 인접행렬의 대부분의 요소가 0임에도 해당 부분을 포함한 2차원 배열을 만들어야 하기 때문
+
+> 보통 인접리스트를 쓰면됨. 다만, 문제에서 인접행렬로 주어진다면 그대로 인접행렬로 푸는것이 좋다
