--- a/Data Structure/Level 3/04_그래프, 트리.md
+++ b/Data Structure/Level 3/04_그래프, 트리.md
@@ -111,6 +111,6 @@
 
 ![img_2.png](../img/선형이진트리.png)
 
-- 그러나, 선형적(직선)의로 삽입이 되었다면 `O(N)`이 되어버림
+- 그러나, 선형적(직선)으로 삽입이 되었다면 `O(N)`이 되어버림
 - 즉, 이진탐색트리는 삽입순서에 따라 영향을 받는다
 - 이를 해결하기 위해, 트리의 노드들을 회전시키는 등의 방법을 통해서 AVL트리, 레드블랙트리를 사용하여 `O(logN)`의 시간복잡도를 보장받음
