--- a/Data Structure/Level 3/05_인접행렬.md
+++ b/Data Structure/Level 3/05_인접행렬.md
@@ -1,6 +1,7 @@
 ## 📓 키워드
 
 - 인접행렬
+- 인접리스트
 
 ---
 
@@ -119,7 +120,7 @@ int main(){
 /*
 0 :: 1 2 3
 1 :: 0 2
-2 :: 0 1s
+2 :: 0 1
 3 :: 0
 */
 ```
