--- a/Data Structure/Level 3/06_맵, 셋.md
+++ b/Data Structure/Level 3/06_맵, 셋.md
@@ -1,6 +1,7 @@
 ## 📓 키워드
 
 - 맵
+- 셋
 
 ---
 
@@ -17,7 +18,7 @@
 - 탐색 : O(logN)
 - 삽입/삭제 : O(logN)
 
-![img.png](img.png)
+![img.png](../img/map.png)
 
 - 고유한 키를 갖기 때문에, 하나의 키에 중복된 값이 들어갈수 없음
 - 자동으로 오름차순 정렬되기 때문에 넣은 순서대로 map을 탐색할 수 있는 것이 아닌 아스키코드순으로 정렬된 값들을 기반으로 탐색함
@@ -58,5 +59,39 @@ KT : 100
 NC : 2
 SSG : 3
 map의 사이즈는 : 0입니다.
+*/
+```
+
+---
+
+## ✏️ 셋(set)
+
+- 고유한 요소만을 저장하는 자료구조
+- 중복을 허용하지 않음
+- 중복된 값은 제거되며 map과 같이 자동정렬됨
+
+#### ☑️ 시간복잡도
+
+- 참조 : O(logN)
+- 탐색 : O(logN)
+- 삽입/삭제 : O(logN)
+
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+int main(){
+    set<int> st2;
+    st2.insert(2);
+    st2.insert(1);
+    st2.insert(2);
+    for(auto it : st2){
+        cout << it << '\n';
+    }
+    return 0;
+}
+
+/*
+1
+2
 */
 ```
