해시테이블

--- a/Data Structure/Level 3/07_해시테이블.md
+++ b/Data Structure/Level 3/07_해시테이블.md
@@ -6,7 +6,7 @@
 
 ## ✏️ 해시테이블(Hash Table)
 
-- 큰 범위를 가진 각양각색의 데이터들을 해싱을 통해 한정된 범위의 정수값을 가진 해시로 만들고 해시라는 키엥 대응하여 원본데이터들을 매핑시켜놓은 테이블
+- 큰 범위를 가진 각양각색의 데이터들을 해싱을 통해 한정된 범위의 정수값을 가진 해시로 만들고 해시라는 키에 대응하여 원본데이터들을 매핑시켜놓은 테이블
 
 ![img.png](../img/해시테이블.png)
 
