시간복잡도

--- a/Data Structure/Level 3/08_힙.md
+++ b/Data Structure/Level 3/08_힙.md
@@ -6,7 +6,7 @@
 
 ## ✏️ 힙
 
-- 여러개의 값 중에서 가장 크거나 작은 값을 빠르게 찾기 위해 만든 완전 이진트리
+- 여러개의 값 중에서 `가장 크거나 작은 값을 빠르게 찾기 위해 만든 완전 이진트리`
 - 가장 작은 요소가 루트노드에 있는 최소힙, 가장 큰 요소가 루트노드에 있는 최대힙이 있다
   - 최대힙 : 부모노드의 값은 자식노드의 값보다 항상 큰 규칙을 지키는 힙
     - 가장 큰 값을 O(1)만에 찾을 수 있음
