--- a/Data Structure/Level 3/08_힙.md
+++ b/Data Structure/Level 3/08_힙.md
@@ -39,10 +39,10 @@
 #### ☑️ 이진탐색트리(BST)와의 차이점
 
 - 이진탐색트리는 탐색을 쉽게하기 위해 왼쪽이 더 작고 오른쪽이 큰 값으로 구성(부모노드 기준) 되어야 하지만, 힙은 그렇지 않음
-- 최소힙을 기반으로 설명하면 이진탐색트리는 왼쪽자식노드가 부모노드보다 더 작은 값을 가지는데, 최소힙은 그렇지 않음
+- 이진탐색트리는 왼쪽자식노드가 부모노드보다 더 작은 값을 가지는데, 최소힙은 그렇지 않음
 
 ### 💭 시간복잡도
 
-- 참조 : O(1)
+- 참조(루트노드) : O(1)
 - 탐색 : O(N)
 - 삽입/삭제 : O(logN)
