--- a/Data Structure/Level 3/11_배열 vs 연결리스트.md
+++ b/Data Structure/Level 3/11_배열 vs 연결리스트.md
@@ -7,7 +7,7 @@
 
 ## ✏️ 배열 vs 연결리스트
 
-![img.png](img.png)
+![img.png](../img/배열,연결리스트%20비교.png)
 
 |                  |  배열   | 연결 리스트 |
 |:----------------:|:-----:|:------:|
